@@ -1,3 +1,7 @@
+Sun May 24 02:08:47 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* utilize final field.
+
 Sun May 24 01:18:36 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/IRGenerator.java: reorder methods.
